--- a/all-top-container.html
+++ b/all-top-container.html
@@ -35,8 +35,8 @@
         <div class="container-fluid text-white" id="change-color">
             <div class="row" id="top-containt">
               <div class="col-4 text-center">
-                <a href="ecommerce.html"><img src="Images/logo.png" height="130px" class="color logo-1 logo-sift"></a>
-                <a href="ecommerce.html"><img src="Images/pinterest_icon.png" height="70px" class=" color logo-2 mt-1 ml-2"></a>
+                <a href="index.html"><img src="Images/logo.png" height="130px" class="color logo-1 logo-sift"></a>
+                <a href="index.html"><img src="Images/pinterest_icon.png" height="70px" class=" color logo-2 mt-1 ml-2"></a>
               </div>
               <div class="col-8 pt-4 mt-1 text-center">
                 <span class="dropdown dropdown-toggle profile" data-toggle="dropdown" style="color:black" >
